fix: fix horizontall scroll and broken layout on resolutions 764-878

--- a/blocks/button/_value/button_value_add.css
+++ b/blocks/button/_value/button_value_add.css
@@ -16,6 +16,13 @@
   opacity: 0.6;
 }
 
+@media screen and (max-width: 1024px) {
+  .button_value_add {
+    margin: 36px auto 0;
+    width: calc(100% / 2);
+  }
+}
+
 @media screen and (max-width: 640px) {
   .button_value_add {
     width: 282px;
