--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -10,3 +10,9 @@
   border-radius: 10px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 }
+
+@media screen and (max-width: 1024px) {
+  .place {
+    margin: 0 auto;
+  }
+}
