--- a/blocks/places/__grid/places__grid.css
+++ b/blocks/places/__grid/places__grid.css
@@ -8,10 +8,17 @@
   padding: 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .places__grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .places__grid {
     row-gap: 20px;
     margin: 36px auto 0;
     max-width: 282px;
+    grid-template-columns: auto;
   }
 }
