--- a/blocks/profile/__info-subtitle/profile__info-subtitle.css
+++ b/blocks/profile/__info-subtitle/profile__info-subtitle.css
@@ -10,10 +10,15 @@
   max-width: 415px;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 1024px) {
   .profile__info-subtitle {
     font-size: 14px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .profile__info-subtitle {
     margin: 14px auto 0;
     max-width: 282px;
   }
