--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,6 +5,12 @@
   max-width: 415px;
 }
 
+@media screen and (max-width: 1024px) {
+  .profile__info {
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .profile__info {
     margin: 26px auto 0;
