--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -11,10 +11,15 @@
   padding-top: 40px;
 }
 
+@media screen and (max-width: 1024px) {
+  .profile {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .profile {
     max-width: 282px;
-    flex-direction: column;
     align-items: center;
   }
 }
